2012-09-21  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3.c: Fix date_sync_regex.

2012-09-20  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amstatus.pl: Fix for taper-parallel-write > 1.
	* installcheck/amstatus.pl: Checkit.
	* installcheck/catalogs/taper-parallel-write.cat: New catalog.

2012-09-19  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3.c: Castor require libcurl 7.19.1.

2012-09-18  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3-device.c, device-src/s3.c: Castor require libcurl
	  7.19.1.

2012-09-17  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3-device.c, device-src/s3.c
	  device-src/s3.h: Add CASTOR S3_API.
	* example/template.d/amanda-CAStor.conf: Example
	  config for castor.

2012-09-17  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amgtar.c: Set gnutar_listdir after the config for
	  the backup set is read.

2012-09-17  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/amxml.c (amstart_element): Set data_user->dle->property.

2012-09-05  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amcheckdump.pl: s/correclty/correctly/g

2012-08-24  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/robot.pm: Correctly set f_type and device_error
	  in state.
	* perl/Amanda/ScanInventory.pm (volume_is_labelable): Set labelstr for
	  does_not_match_labelstr.
	* perl/Amanda/Taper/Scan/lexical.pm,
	  perl/Amanda/Taper/Scan/oldest.pm (analyze): Check label match
	  labelstr.
	* server-src/amcheck-device.pl (_user_msg_fn): print message when res
	  is not set.
	* server-src/amtape.pl: Fix for device returning empty error.
	* installcheck/Amanda_Changer_ndmp.pl,
	  installcheck/Amanda_Changer_robot.pl: Fix for f_type set.

2012-08-24  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/gnutar.pl: fc17 gnutar is like fc15.

2012-08-24  Jean-Louis Martineau <martineau@zmanda.com>